Corrected alignment of Download Button

--- a/frontend/src/css/modules/base.scss
+++ b/frontend/src/css/modules/base.scss
@@ -878,5 +878,8 @@ tr {
     margin-left: 1%;
     padding: 2px 5px 2px 5px;
     height: auto;
-    line-height: 15px;
+    line-height: 14px;
+    text-align: center;
+    margin-bottom: 0.2%;
+    border-radius: 5px;
 }
